# osprey

./: .cruft.json  .dockerignore  .gitignore  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  environment-docs.yml  environment.yml  gunicorn.conf  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  resolve_rvic_issues  setup.cfg  setup.py
.github/workflows/: black.yml  docker-publish.yml  image-scan.yml  python-ci.yml
dev-component/: DEVELOPMENT.md  docker-compose-extra.yml  wps.cfg
docs/: Makefile  _config.yml  configuration.md  dev_guide.md  index.md  installation.md  processes.md
docs/formatted_demos/: wps_convert_demo.html  wps_convolution_demo.html  wps_full_rvic_demo.html  wps_parameters_demo.html
docs/source/: .gitignore  conf.py  configuration.rst  dev_guide.rst  installation.rst  output-sanitize.cfg  processes.rst
docs/source/notebooks/: example.ipynb  wps_convert_demo.ipynb  wps_convolution.ipynb  wps_convolution_demo.ipynb  wps_full_rvic.ipynb  wps_full_rvic_demo.ipynb  wps_parameters_demo.ipynb
etc/: sample-custom.cfg
notebooks/: README.md  demo_parameters.ipynb  demo_requirements.txt  testers.md  wps_convert_demo.ipynb  wps_convolution_demo.ipynb  wps_full_rvic_demo.ipynb  wps_parameters_demo.ipynb
notebooks/demo_individual/: demo_convert.ipynb  demo_convolution.ipynb  demo_full_rvic.ipynb  demo_parameters.ipynb
notebooks/tests/: wps_convert_demo.ipynb  wps_convolution_demo.ipynb  wps_full_rvic_demo.ipynb  wps_parameters_demo.ipynb
osprey/: __init__.py  __version__.py  cli.py  config_templates.py  default.cfg  io.py  testing.py  utils.py
osprey/processes/: __init__.py  wps_Convolution.py  wps_convert.py  wps_convolution.py  wps_full_rvic.py  wps_parameters.py  wps_say_hello.py
pavics-component/: .gitignore  docker-compose-extra.yml  osprey-magpie-permission.cfg.template  osprey-magpie-provider.cfg.template  osprey_canarie_api_monitoring.py.template  wps.cfg.template
tests/: __init__.py  common.py  conftest.py  test_wps_caps.py  test_wps_convert.py  test_wps_convolution.py  test_wps_full_rvic.py  test_wps_hello.py  test_wps_parameters.py  utils.py
tests/configs/: parameter_https.cfg  parameter_opendap.cfg
tests/data/configs/: convert.cfg  convert_err.cfg  convert_local.cfg  convert_mixed.cfg  convolve.cfg  convolve_mixed.cfg  convolve_opendap.cfg  parameter_mixed.cfg  parameters.cfg  parameters_https.cfg  parameters_local.cfg  parameters_mixed.cfg  sample_convolve.config.cfg  sample_parameter_config.cfg
tests/data/samples/: STATION_FILE  sample.uh_s2  sample_parameter_config.cfg  station1.uh_s2  station_file.txt
